test/language/spec/templates/invalid/constraint_conflict.topo
// TEST: constraint references non-existent parent
// EXPECT-ERROR: parent constraint.*not found

using Bool = std::cpp17::bool;

namespace math {
  public:
    constraint Sortable : MissingParent {
      Bool compare(T a, T b);
    }
}
